force-app/main/default/objects/Parametrica_2__c/Parametrica_2__c.object-meta.xml
<CustomObject>
    <description>Parametrica que contiene los datos de Ibermatica</description>
    <label>Parametrica Ibermática</label>
    <nameField>
        <label>Nombre de Parametrica Ibermática</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parametricas Ibermática</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>