force-app/main/default/objects/Parametrica_2__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <length>10</length>
    <type>Text</type>
</CustomField>