force-app/main/default/objects/Parametrica_2__c/fields/Area_Conocimiento_Tecnologica__c.field-meta.xml
<CustomField>
    <fullName>Area_Conocimiento_Tecnologica__c</fullName>
    <label>Área Conocimiento Tecnológica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>