force-app/main/default/objects/Parametrica_2__c/fields/Cambio__c.field-meta.xml
<CustomField>
    <fullName>Cambio__c</fullName>
    <label>Cambio</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>