force-app/main/default/objects/Parametrica_2__c/fields/CCI__c.field-meta.xml
<CustomField>
    <fullName>CCI__c</fullName>
    <label>CCI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>