force-app/main/default/objects/Parametrica_2__c/fields/Centro_resp_Super__c.field-meta.xml
<CustomField>
    <fullName>Centro_resp_Super__c</fullName>
    <label>Centro resp. Super</label>
    <length>255</length>
    <type>Text</type>
</CustomField>