force-app/main/default/objects/Parametrica_2__c/fields/Clave_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Clave_Pipeline__c</fullName>
    <label>Clave Pipeline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>