force-app/main/default/objects/Parametrica_2__c/fields/Codigo_CNAE__c.field-meta.xml
<CustomField>
    <fullName>Codigo_CNAE__c</fullName>
    <label>Codigo CNAE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>