force-app/main/default/objects/Parametrica_2__c/fields/Codigo_CNAE_num__c.field-meta.xml
<CustomField>
    <fullName>Codigo_CNAE_num__c</fullName>
    <label>Codigo CNAE num</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>