force-app/main/default/objects/Parametrica_2__c/fields/Codigo_CR__c.field-meta.xml
<CustomField>
    <fullName>Codigo_CR__c</fullName>
    <label>Codigo CR</label>
    <length>7</length>
    <type>Text</type>
</CustomField>