force-app/main/default/objects/Parametrica_2__c/fields/Codigo_CR_HW_Super__c.field-meta.xml
<CustomField>
    <fullName>Codigo_CR_HW_Super__c</fullName>
    <label>Codigo CR HW Super</label>
    <length>7</length>
    <type>Text</type>
</CustomField>