force-app/main/default/objects/Parametrica_2__c/fields/Codigo_Entorno_Tecnologico__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Entorno_Tecnologico__c</fullName>
    <label>Código Entorno Tecnológico</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>