force-app/main/default/objects/Parametrica_2__c/fields/Codigo_Externo__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Externo__c</fullName>
    <label>Codigo Externo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>