force-app/main/default/objects/Parametrica_2__c/fields/Codigo_Gestor_Produccion__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Gestor_Produccion__c</fullName>
    <label>Codigo Gestor Produccion</label>
    <length>7</length>
    <type>Text</type>
</CustomField>