force-app/main/default/objects/Parametrica_2__c/fields/Codigo_SIC__c.field-meta.xml
<CustomField>
    <fullName>Codigo_SIC__c</fullName>
    <label>Codigo SIC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>