force-app/main/default/objects/Parametrica_2__c/fields/CPV__c.field-meta.xml
<CustomField>
    <fullName>CPV__c</fullName>
    <label>CPV</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>