force-app/main/default/objects/Parametrica_2__c/fields/CR_Importe_OCP__c.field-meta.xml
<CustomField>
    <fullName>CR_Importe_OCP__c</fullName>
    <label>CR Importe OCP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>