force-app/main/default/objects/Parametrica_2__c/fields/Denominacion__c.field-meta.xml
<CustomField>
    <fullName>Denominacion__c</fullName>
    <label>Denominacion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>