force-app/main/default/objects/Parametrica_2__c/fields/Descripcion_CPV__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_CPV__c</fullName>
    <label>Descripción CPV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>