force-app/main/default/objects/Parametrica_2__c/fields/Desglose_importes__c.field-meta.xml
<CustomField>
    <fullName>Desglose_importes__c</fullName>
    <inlineHelpText>Opciones: Sí / No</inlineHelpText>
    <label>Desglose importes</label>
    <length>5</length>
    <type>Text</type>
</CustomField>