force-app/main/default/objects/Parametrica_2__c/fields/Entorno_Tecnologico__c.field-meta.xml
<CustomField>
    <fullName>Entorno_Tecnologico__c</fullName>
    <label>Entorno Tecnológico</label>
    <length>60</length>
    <type>Text</type>
</CustomField>