force-app/main/default/objects/Parametrica_2__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>Activo</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>Inactivo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>