force-app/main/default/objects/Parametrica_2__c/fields/Fecha_1__c.field-meta.xml
<CustomField>
    <fullName>Fecha_1__c</fullName>
    <label>Fecha 1</label>
    <type>Date</type>
</CustomField>