force-app/main/default/objects/Parametrica_2__c/fields/FICEPI__c.field-meta.xml
<CustomField>
    <fullName>FICEPI__c</fullName>
    <label>FICEPI</label>
    <length>100</length>
    <type>Text</type>
</CustomField>