force-app/main/default/objects/Parametrica_2__c/fields/Gestor_de_produccion__c.field-meta.xml
<CustomField>
    <fullName>Gestor_de_produccion__c</fullName>
    <label>Gestor de produccion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>