force-app/main/default/objects/Parametrica_2__c/fields/Gestor_de_produccion_lookup__c.field-meta.xml
<CustomField>
    <fullName>Gestor_de_produccion_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gestor de produccion</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Parametrica_2__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Gestor Produccion</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Parametrica_2__c</referenceTo>
    <relationshipLabel>Parametricas Ibermática (Gestor de produccion)</relationshipLabel>
    <relationshipName>Gestor_de_produccion_lookup</relationshipName>
    <type>Lookup</type>
</CustomField>