force-app/main/default/objects/Parametrica_2__c/fields/Horizontal__c.field-meta.xml
<CustomField>
    <fullName>Horizontal__c</fullName>
    <label>Horizontal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>