force-app/main/default/objects/Parametrica_2__c/fields/Importe_aux__c.field-meta.xml
<CustomField>
    <fullName>Importe_aux__c</fullName>
    <label>Importe aux</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>