force-app/main/default/objects/Parametrica_2__c/fields/Importe_pipeline__c.field-meta.xml
<CustomField>
    <fullName>Importe_pipeline__c</fullName>
    <label>Importe pipeline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>