force-app/main/default/objects/Parametrica_2__c/fields/Modulo__c.field-meta.xml
<CustomField>
    <fullName>Modulo__c</fullName>
    <label>Modulo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>