force-app/main/default/objects/Parametrica_2__c/fields/Moneda_destino__c.field-meta.xml
<CustomField>
    <fullName>Moneda_destino__c</fullName>
    <label>Moneda destino</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Euro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>