force-app/main/default/objects/Parametrica_2__c/fields/Moneda_origen__c.field-meta.xml
<CustomField>
    <fullName>Moneda_origen__c</fullName>
    <label>Moneda origen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Peso argentino</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>