force-app/main/default/objects/Parametrica_2__c/fields/Organizacion__c.field-meta.xml
<CustomField>
    <fullName>Organizacion__c</fullName>
    <label>Organización</label>
    <length>100</length>
    <type>Text</type>
</CustomField>