force-app/main/default/objects/Parametrica_2__c/fields/Organizacion_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Organizacion_Comercial__c</fullName>
    <label>Organización Comercial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>