force-app/main/default/objects/Parametrica_2__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <label>Pipeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pipeline 2024</fullName>
            </value>
            <value>
                <fullName>Pipeline 2023</fullName>
            </value>
            <value>
                <fullName>Pipeline sin reselling 2024</fullName>
            </value>
            <value>
                <fullName>Pipeline sin reselling 2023</fullName>
            </value>
            <value>
                <fullName>Anteriores</fullName>
            </value>
            <value>
                <fullName>Anteriores sin reselling</fullName>
            </value>
            <value>
                <fullName>Pipeline 2025</fullName>
            </value>
            <value>
                <fullName>Pipeline sin reselling 2025</fullName>
            </value>
            <value>
                <fullName>Hard 2025</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>