force-app/main/default/objects/Parametrica_2__c/fields/Por_defecto__c.field-meta.xml
<CustomField>
    <fullName>Por_defecto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Por defecto</label>
    <type>Checkbox</type>
</CustomField>