force-app/main/default/objects/Parametrica_2__c/fields/Solucion__c.field-meta.xml
<CustomField>
    <fullName>Solucion__c</fullName>
    <label>Solucion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>