force-app/main/default/objects/Parametrica_2__c/fields/Subsector__c.field-meta.xml
<CustomField>
    <fullName>Subsector__c</fullName>
    <label>Subsector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>