force-app/main/default/objects/Parametrica_2__c/fields/year__c.field-meta.xml
<CustomField>
    <fullName>year__c</fullName>
    <label>Año</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>