force-app/main/default/objects/Parametrica_2__c/recordTypes/Area_Conocimiento_Tecnologico.recordType-meta.xml
<RecordType>
    <fullName>Area_Conocimiento_Tecnologico</fullName>
    <active>true</active>
    <label>Area Conocimiento Tecnológico</label>
</RecordType>