force-app/main/default/objects/Parametrica_2__c/recordTypes/Area_Solucion_Producto.recordType-meta.xml
<RecordType>
    <fullName>Area_Solucion_Producto</fullName>
    <active>true</active>
    <label>Area Solucion Producto</label>
</RecordType>