force-app/main/default/objects/Parametrica_2__c/recordTypes/Campanya.recordType-meta.xml
<RecordType>
    <fullName>Campanya</fullName>
    <active>true</active>
    <label>Campaña</label>
</RecordType>