force-app/main/default/objects/Parametrica_2__c/recordTypes/CCI.recordType-meta.xml
<RecordType>
    <fullName>CCI</fullName>
    <active>true</active>
    <label>CCI</label>
</RecordType>