force-app/main/default/objects/Parametrica_2__c/recordTypes/Centro_Responsabilidad.recordType-meta.xml
<RecordType>
    <fullName>Centro_Responsabilidad</fullName>
    <active>true</active>
    <label>Centro Responsabilidad</label>
</RecordType>