force-app/main/default/objects/Parametrica_2__c/recordTypes/CNAE.recordType-meta.xml
<RecordType>
    <fullName>CNAE</fullName>
    <active>true</active>
    <label>CNAE</label>
</RecordType>