force-app/main/default/objects/Parametrica_2__c/recordTypes/CPV.recordType-meta.xml
<RecordType>
    <fullName>CPV</fullName>
    <active>true</active>
    <label>CPV</label>
</RecordType>