force-app/main/default/objects/Parametrica_2__c/recordTypes/Entorno_tecnologico.recordType-meta.xml
<RecordType>
    <fullName>Entorno_tecnologico</fullName>
    <active>true</active>
    <label>Entorno tecnológico</label>
</RecordType>