force-app/main/default/objects/Parametrica_2__c/recordTypes/Gestor_Produccion.recordType-meta.xml
<RecordType>
    <fullName>Gestor_Produccion</fullName>
    <active>true</active>
    <label>Gestor Produccion</label>
</RecordType>