force-app/main/default/objects/Parametrica_2__c/recordTypes/Gestor_Produccion_Centro_Responsabilidad.recordType-meta.xml
<RecordType>
    <fullName>Gestor_Produccion_Centro_Responsabilidad</fullName>
    <active>true</active>
    <label>Gestor Produccion - Centro Responsabilidad</label>
</RecordType>