force-app/main/default/objects/Parametrica_2__c/recordTypes/Horizontal.recordType-meta.xml
<RecordType>
    <fullName>Horizontal</fullName>
    <active>true</active>
    <label>Horizontal</label>
</RecordType>