force-app/main/default/objects/Parametrica_2__c/recordTypes/Organizaci_n_Comercial.recordType-meta.xml
<RecordType>
    <fullName>Organizaci_n_Comercial</fullName>
    <active>true</active>
    <description>Maestro de la organización Comercial , para la integración con Super</description>
    <label>Organización Comercial</label>
</RecordType>