force-app/main/default/objects/Parametrica_2__c/recordTypes/Organizacion.recordType-meta.xml
<RecordType>
    <fullName>Organizacion</fullName>
    <active>true</active>
    <label>Organización</label>
</RecordType>