force-app/main/default/objects/Parametrica_2__c/recordTypes/Paises.recordType-meta.xml
<RecordType>
    <fullName>Paises</fullName>
    <active>true</active>
    <label>Paises</label>
</RecordType>