force-app/main/default/objects/Parametrica_2__c/recordTypes/Provincias.recordType-meta.xml
<RecordType>
    <fullName>Provincias</fullName>
    <active>true</active>
    <label>Provincias</label>
</RecordType>