force-app/main/default/objects/Parametrica_2__c/recordTypes/Sector.recordType-meta.xml
<RecordType>
    <fullName>Sector</fullName>
    <active>true</active>
    <label>Sector</label>
</RecordType>