force-app/main/default/objects/Parametrica_2__c/recordTypes/SIC.recordType-meta.xml
<RecordType>
    <fullName>SIC</fullName>
    <active>true</active>
    <label>SIC</label>
</RecordType>