force-app/main/default/objects/Parametrica_2__c/recordTypes/Subsector.recordType-meta.xml
<RecordType>
    <fullName>Subsector</fullName>
    <active>true</active>
    <label>Subsector</label>
</RecordType>