force-app/main/default/objects/Parametrica_2__c/recordTypes/Tipo_de_cambio.recordType-meta.xml
<RecordType>
    <fullName>Tipo_de_cambio</fullName>
    <active>true</active>
    <label>Tipo de cambio</label>
</RecordType>