force-app/main/default/objects/Parametrica_2__c/listViews/Area_Conocimiento_Tecnol_gico.listView-meta.xml
<ListView>
    <fullName>Area_Conocimiento_Tecnol_gico</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Parametrica_2__c.Area_Conocimiento_Tecnologico</value>
    </filters>
    <label>Area Conocimiento Tecnológico</label>
</ListView>