force-app/main/default/objects/Parametrica_2__c/listViews/CCI.listView-meta.xml
<ListView>
    <fullName>CCI</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Parametrica_2__c.CCI</value>
    </filters>
    <label>CCI</label>
</ListView>