force-app/main/default/objects/Parametrica_2__c/listViews/Centro_de_Responsabilidad.listView-meta.xml
<ListView>
    <fullName>Centro_de_Responsabilidad</fullName>
    <columns>NAME</columns>
    <columns>GUID_Clip__c</columns>
    <columns>Codigo_CR__c</columns>
    <columns>Centro_resp_Super__c</columns>
    <columns>Desglose_importes__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Horizontal__c</columns>
    <columns>Por_defecto__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Parametrica_2__c.Centro_Responsabilidad</value>
    </filters>
    <label>Centro de Responsabilidad</label>
</ListView>