force-app/main/default/objects/Parametrica_2__c/listViews/CNAE.listView-meta.xml
<ListView>
    <fullName>CNAE</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Parametrica_2__c.CNAE</value>
    </filters>
    <label>CNAE</label>
</ListView>