force-app/main/default/objects/Parametrica_2__c/listViews/CPV.listView-meta.xml
<ListView>
    <fullName>CPV</fullName>
    <columns>NAME</columns>
    <columns>CPV__c</columns>
    <columns>Descripcion_CPV__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Parametrica_2__c.CPV</value>
    </filters>
    <label>CPV</label>
</ListView>