force-app/main/default/objects/Parametrica_2__c/listViews/Entornos_Tecnol_gicos.listView-meta.xml
<ListView>
    <fullName>Entornos_Tecnol_gicos</fullName>
    <columns>NAME</columns>
    <columns>Codigo_Entorno_Tecnologico__c</columns>
    <columns>Entorno_Tecnologico__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Parametrica_2__c.Entorno_tecnologico</value>
    </filters>
    <label>Entornos Tecnológicos</label>
</ListView>