force-app/main/default/objects/Parametrica_2__c/listViews/Gestor_de_Producci_n.listView-meta.xml
<ListView>
    <fullName>Gestor_de_Producci_n</fullName>
    <columns>NAME</columns>
    <columns>Codigo_Gestor_Produccion__c</columns>
    <columns>Gestor_de_produccion__c</columns>
    <columns>FICEPI__c</columns>
    <columns>Estado__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Parametrica_2__c.Gestor_Produccion</value>
    </filters>
    <label>Gestor de Producción</label>
</ListView>