force-app/main/default/objects/Parametrica_2__c/listViews/Organizaciones_Comerciales.listView-meta.xml
<ListView>
    <fullName>Organizaciones_Comerciales</fullName>
    <columns>NAME</columns>
    <columns>Organizacion_Comercial__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Estado__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Parametrica_2__c.Organizacion</value>
    </filters>
    <label>Organizaciones Comerciales</label>
</ListView>