force-app/main/default/objects/Parametrica_2__c/listViews/Paises.listView-meta.xml
<ListView>
    <fullName>Paises</fullName>
    <columns>NAME</columns>
    <columns>Denominacion__c</columns>
    <columns>Codigo_Externo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Parametrica_2__c.Paises</value>
    </filters>
    <label>Paises</label>
</ListView>