force-app/main/default/objects/Parametrica_2__c/listViews/Pipeline.listView-meta.xml
<ListView>
    <fullName>Pipeline</fullName>
    <columns>NAME</columns>
    <columns>Clave_Pipeline__c</columns>
    <columns>Importe_pipeline__c</columns>
    <columns>Importe_aux__c</columns>
    <columns>Mercado__c</columns>
    <columns>DivisionPicklist__c</columns>
    <columns>Linea_de_Servicio__c</columns>
    <columns>Pipeline__c</columns>
    <columns>Fecha_1__c</columns>
    <columns>Fecha_2__c</columns>
    <columns>Control__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Parametrica_2__c.Pipeline</value>
    </filters>
    <label>Pipeline</label>
</ListView>