force-app/main/default/objects/Parametrica_2__c/listViews/Provincias.listView-meta.xml
<ListView>
    <fullName>Provincias</fullName>
    <columns>NAME</columns>
    <columns>Pais__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Parametrica_2__c.Provincias</value>
    </filters>
    <label>Provincias</label>
</ListView>