force-app/main/default/objects/Parametrica_2__c/listViews/Sector.listView-meta.xml
<ListView>
    <fullName>Sector</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Parametrica_2__c.Sector</value>
    </filters>
    <label>Sector</label>
</ListView>