force-app/main/default/objects/Parametrica_2__c/listViews/SIC.listView-meta.xml
<ListView>
    <fullName>SIC</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Parametrica_2__c.SIC</value>
    </filters>
    <label>SIC</label>
</ListView>